Fix error message spacing for auth

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -85,7 +85,6 @@ header {
   justify-content: flex-end;
 }
 
-.greeting {
-  display: block;
-  justify-content: flex-start;
+li.errors {
+  padding: 7px;
 }
